# llvm-nanobind

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  cmake.toml  llvm-bin  llvm-c-test-wrapper.py  playground.py  pyproject.toml  run_llvm_c_tests.py  run_tests.py  test.py  test_basic_block.py  test_bitcode_param_crash.py  test_builder_arithmetic.py  test_builder_casts.py  test_builder_cmp.py  test_builder_control_flow.py  test_builder_memory.py  test_constants.py  test_context.py  test_factorial.py  test_function.py  test_function_param_crash.py  test_globals.py  test_memory_safety.py  test_memory_syncscope.py  test_memory_type_by_name.py  test_memory_unwind_dest.py  test_module.py  test_phi.py  test_struct.py  test_syncscope_crash.bc  test_syncscope_crash.ll  test_syncscope_final.py  test_syncscope_minimal.py  test_syncscope_minimal2.py  test_type_crash.py  test_type_crash2.py  test_type_crash3.py  (+1 more)
.github/workflows/: ci.yml
cmake/: FindLLVM-Wrapper.cmake  Findnanobind-wrapper.cmake  magic-llvm.cmake
devdocs/: DEBUGGING.md  README.md  api-design-philosophy.md  api-reference.md  assertions.md  create-builder-api-design.md  future.md  lit-tests.md  llvm-c-bugs.md  memory-model-issues.md  memory-model.md  operands.md  plan.md  porting-guide.md  predecessors.md  programmers-manual.md  progress.md
devdocs/archive/: api-docs.md  bindings.md  dibuilder-api.md  feature-matrix.md  llvm-c-test-coverage.md  llvm-c-test.md  parsing-refactor.md  value-api.md
devdocs/bindings/: plan.md
devdocs/feature-matrix/: core.md  debuginfo.md  implementation-task.md  misc.md  progress.md  summary.md  target.md
devdocs/fixing-tests/: plan.md  progress.md
devdocs/llvm-c-test/: PHASE_1_2_SUMMARY.md  lit-tests.md  plan.md  progress.md
devdocs/review/: plan.md  progress.md
devdocs/transformation-api/: README.md  architecture-diagrams.md  cheat-sheet.md  hands-on-exercise.py  interactive-quiz.py  learning-guide.html  learning-guide.md  plan.md  progress.md
examples/: bc-graphviz.py  bc-profile.py  bc-stats.py  out-profileme.ll  profileme.cpp  profileme.ll  use_vs_user.py
exercises/: CATALOG.md  README.md  portal-schema.md
exercises/poc/: README.md  evaluator.py  exercise_bank.py  portal.py
exercises/templates/: exercise.toml  exercise_output.toml
llvm-c/llvm-c-test/: echo.cpp  object.c
llvm_c_test/: attributes.py  calc.py  debuginfo.py  diagnostic.py  echo.py  helpers.py  main.py  metadata.py  module_ops.py  object_file.py  targets.py
src/: llvm-nanobind.cpp
tests/: test_basic_block.cpp  test_binary.py  test_bitcode_linker.py  test_builder_arithmetic.cpp  test_builder_casts.cpp  test_builder_casts.py  test_builder_cmp.cpp  test_builder_cmp.py  test_builder_control_flow.cpp  test_builder_control_flow.py  test_builder_memory.cpp  test_builder_memory.py  test_call_conv.cpp  test_call_conv.py  test_constants.cpp  test_constants.py  test_factorial.cpp  test_feature_matrix.py  test_feature_matrix_new.py  test_function.cpp  test_function.py  test_function_extended.cpp  test_function_extended.py  test_globals.cpp  test_globals.py  test_module.cpp  test_passbuilder.py  test_phi.cpp  test_phi.py  test_predecessors.cpp  test_predecessors.py  test_struct.cpp  test_struct.py  test_target_codegen.py  test_types.cpp  test_types.py
tests/regressions/: test_binary_iterator_end_guards.py  test_binary_iterators.py  test_builder_before_first_non_phi.py  test_const_bytes.py  test_dibuilder_metadata.py  test_error_message_format.py  test_exception_first_accessors.py  test_full_tree_guard_matrix.py  test_function_param_crash.py  test_instruction_move_and_aliases.py  test_lazy_materializable.py  test_memory_delete_instruction.py  test_module_id_stdin.py  test_non_value_guard_matrix.py  test_operand_bounds.py  test_split_basic_block.py  test_symbol_size_crash.cpp  test_symbol_size_crash.py  test_syncscope_crash.py  test_type_crash.py  test_type_guard_matrix.py  test_unwind_dest.py  test_value_kind_guards.py
tools/obfuscation/: README.md  basic_block_splitter.py  bb_split.cpp  control_flow_flatten.cpp  indirect_branch.cpp  (+6 more)
(+58 files in other folders)
