[build-system]
requires = ["scikit-build-core >=0.11.6", "nanobind >=2.10.2"]
build-backend = "scikit_build_core.build"

[project]
name = "llvm-nanobind"
version = "0.0.1"
description = "LLVM-C Python bindings with nanobind."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
llvm-c-test = "llvm_c_test.main:main"

[project.urls]
Homepage = "https://github.com/LLVMParty/llvm-nanobind"

[dependency-groups]
dev = [
    "auto-faulthandler>=1.0.0",
    "coverage>=7.11.3",
    "lit>=18.1.8",
    "pytest",
]

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

# This setup only works properly in redirect mode
editable.mode = "redirect"

# Install the llvm_c_test Python package
wheel.packages = ["llvm_c_test"]

[tool.uv]
cache-keys = [
    { file = "CMakeLists.txt" },
    { file = "src/**/*.cpp" },
    { file = "src/**/*.h" },
    { file = "llvm-c/llvm-c-test/*.c" },
    { file = "llvm-c/llvm-c-test/*.cpp" },
    { file = "llvm-c/llvm-c-test/*.h" },
]

[tool.ty.environment]
# Don't include src/ in first-party search path so ty finds the installed
# package (with .pyi stubs) in .venv/lib/python3.12/site-packages/ instead
root = ["."]

[tool.pyright]
include = ["tests"]
exclude = [
    "build/**",
    ".venv/**",
    "**/__pycache__",
]
extraPaths = []
venvPath = "."
venv = ".venv"

[tool.mypy]
exclude = [
    "^build/",
]

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-requires = "pytest"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"

[tool.coverage.run]
source = ["llvm_c_test", "."]
omit = [
    "tests/*",
    "build/*",
    ".venv/*",
    "llvm-c/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
